--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=provenience
-spring.h2.console.enabled=true
-spring.datasource.generate-unique-name=false
+#spring.h2.console.enabled=true
+#spring.datasource.generate-unique-name=false
 spring.datasource.name=provenienceDB
+spring.datasource.
