--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
-spring.application.name=provenience
-#spring.h2.console.enabled=true
-#spring.datasource.generate-unique-name=false
-spring.datasource.name=provenienceDB
-spring.datasource.
+#spring.application.name=provenience
+##spring.h2.console.enabled=true
+##spring.datasource.generate-unique-name=false
+#spring.datasource.name=provenienceDB
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.username=prove
+#spring.datasource.password=password
+spring.sql.init.mode=always
